--- a/TR.OA.BusHelper/TR.OA.BusHelper.csproj
+++ b/TR.OA.BusHelper/TR.OA.BusHelper.csproj
@@ -34,10 +34,7 @@
     <Reference Include="iTR.OP.Invoice">
       <HintPath>..\..\InvoiceApp\Release\iTR.OP.Invoice.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\ydb2020\WS\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
