保存授权和责任人同步

--- a/TR.OA.BusHelper/TR.OA.BusHelper.csproj
+++ b/TR.OA.BusHelper/TR.OA.BusHelper.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthHelper.cs" />
     <Compile Include="ItemBusHelper.cs" />
     <Compile Include="OWLBusHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
