新增与OA组织架构/人员信息交互类

--- a/TR.OA.BusHelper/TR.OA.BusHelper.csproj
+++ b/TR.OA.BusHelper/TR.OA.BusHelper.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrganizationlHelper.cs" />
     <Compile Include="HospitalHelper.cs" />
     <Compile Include="AuthHelper.cs" />
     <Compile Include="ItemBusHelper.cs" />
